<resources>
    <string name="app_name">"蓝牙充电桩"</string>
    <string name="ble_not_supported">Bluetooth Low Energy not supported</string>

    <string name="soft_update_no">已经是最新版本</string>
    <string name="device_uame">设备名：</string>
    <string name="soft_update_title">升级提醒</string>
    <string name="soft_update_info">检测到新版本，立即更新吗?</string>
    <string name="soft_update_updatebtn">立即更新</string>
    <string name="soft_update_later">稍后更新</string>
    <string name="soft_updating">正在更新</string>
    <string name="soft_update_cancel">取消</string>
    <string name="permission_get_accounts_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_GET_ACCOUNTS</string>
    <string name="permission_read_phone_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_READ_PHONE_STATE</string>
    <string name="permission_call_phone_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_CALL_PHONE</string>
    <string name="permission_camera_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_CAMERA</string>
    <string name="permission_access_fine_location_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_ACCESS_FINE_LOCATION</string>
    <string name="permission_access_coarse_location_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_ACCESS_COARSE_LOCATION</string>
    <string name="permission_read_external_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_READ_EXTERNAL_STORAGE</string>
    <string name="permission_white_external_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_WRITE_EXTERNAL_STORAGE</string>
    <string name="permission_recode_audio_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_RECORD_AUDIO</string>


    <string name="switch_wrap_mode">转换wrap模式</string>
    <string name="switch_wrap_mode_true">转换wrap模式 | 当前 : true</string>
    <string name="switch_wrap_mode_false">转换wrap模式 | 当前 : false</string>
    <string name="content_1">设置内容一</string>
    <string name="content_2">设置内容二</string>
    <string name="scroll_downwards_2">向下滑动2个单元</string>
    <string name="get_current_content">获取当前选中内容</string>
    <string name="to_time_picker_view">TimePickerView</string>
    <string name="activity_time_picker">TimePickerView</string>
    <string name="picked_content_is">您选择的时间是：</string>
    <string name="hour_hint">时</string>
    <string name="minute_hint">分</string>
    <string name="get_data">确认</string>
    <string name="in_scroll_view">In ScrollView</string>
    <string name="show_in_dialog">Dialog中显示</string>
    <string name="place_holder_above_2">HourPicker的响应回调在子线程中执行，其它两者在主线程中执行</string>
    <string name="place_holder_below_1">Placeholder Button2</string>
    <string name="place_holder_below_2">Placeholder Button3</string>
    <string name="place_holder_below_3">Placeholder Button4</string>
    <string name="current_thread_name">回调所处线程名称: </string>
    <string name="current_picked_value">当前选中值: </string>
    <string name="cancel">取消</string>
    <string name="sure">确定</string>
    <string name="device_voltage">电压:</string>

    <string name="time_xiaoshi1">1小时</string>
    <string name="time_xiaoshi2">2小时</string>
    <string name="time_xiaoshi3">3小时</string>
    <string name="time_xiaoshi4">4小时</string>
    <string name="time_xiaoshi5">5小时</string>

    <string name="time_fenzhong1">10分钟</string>
    <string name="time_fenzhong2">20分钟</string>
    <string name="time_fenzhong3">30分钟</string>
    <string name="time_fenzhong4">40分钟</string>
    <string name="time_fenzhong5">50分钟</string>
    <string name="password">密码请以字母或者数字开头,长度为6-16位,且不能包含特殊字符</string>
    <string name="battery_state_yes">电池已接好</string>
    <string name="battery_state_no">电池未接入</string>
    <string name="battery_notify_no">请检查充电桩插头或电池插头</string>
    <string name="battery_notify_yes">建议连续充电时间12小时可达到满电</string>

    <string-array name="show_time">
        <item>1 小时</item>
        <item>2 小时</item>
        <item>3 小时</item>
        <item>4 小时</item>
        <item>5 小时</item>
        <item>6 小时</item>
        <item>7 小时</item>
        <item>8 小时</item>
        <item>9 小时</item>
        <item>10小时</item>
        <item>11小时</item>
        <item>12小时</item>

    </string-array>

    <string-array name="show_money">
        <item>5元</item>
        <item>10元</item>
        <item>20元</item>
        <item>30元</item>
        <item>50元</item>
        <item>100元</item>
    </string-array>
    <string-array name="money">
        <item>500</item>
        <item>1000</item>
        <item>2000</item>
        <item>3000</item>
        <item>5000</item>
        <item>10000</item>
    </string-array>

    <string-array name="test_display_2">
        <item>10分钟</item>
        <item>20分钟</item>
        <item>30分钟</item>
        <item>40分钟</item>
        <item>50分钟</item>
        <item>60分钟</item>
        <item>70分钟</item>
        <item>80分钟</item>
        <item>90分钟</item>
        <item>100分钟</item>
        <item>110分钟</item>
        <item>120分钟</item>
        <item>130分钟</item>
        <item>140分钟</item>
        <item>150分钟</item>
        <item>160分钟</item>
        <item>170分钟</item>
    </string-array>

    <string-array name="hour_display">
        <item>12</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
    </string-array>
    <string name="android_auto_update_dialog_title">发现新版本</string>
    <string name="android_auto_update_notify_ticker">发现新版本,点击进行升级</string>
    <string name="android_auto_update_notify_content">发现新版本,点击进行升级</string>

    <string name="android_auto_update_dialog_btn_download">立即下载</string>
    <string name="android_auto_update_dialog_btn_cancel">以后再说</string>

    <string name="android_auto_update_toast_no_new_update">已经是最新版本</string>

    <string name="android_auto_update_download_progress">正在下载:%1$d%%</string>

    <string name="android_auto_update_dialog_checking">正在检查版本</string>
    <string name="user_regist">用户注册</string>
    <string name="user_login">用户登录</string>
    <string name="login">登 录</string>
    <string name="regist">注册</string>
    <string name="forget_pwd">忘记密码?</string>
    <string name="get_code">获取验证码</string>
    <string name="get_code_voice">语音验证</string>
    <string name="is_not_phone_num">你输入的手机号不合法!</string>
    <string name="notify_msg_count">今天次数已用完!</string>
    <string name="input_none">您输入信息不全!</string>
    <string name="getCodeFail">获取短信验证码失败,请稍后重试</string>
    <string name="loginSuccess">登录成功</string>
    <string name="loginFail">登录失败，请稍后重试</string>
    <string name="is_not_pwd">密码请以字母或者数字开头,长度为6-16位,且不能包含特殊字符</string>
    <string name="find_pwd">找回密码</string>
    <string name="complete">完成</string>
    <string name="battery_used">充电桩使用情况</string>
    <string name="user_center">用户中心</string>
    <string name="set">设置</string>
    <string name="user_record">使用记录</string>
    <string name="about_us">关于我们</string>
    <string name="contact_us">联系我们</string>
    <string name="wechat">微信公众号</string>
    <string name="service_telephone">客服电话</string>
    <string name="email">tag8805@dingtalk.com</string>
    <string name="wechat_name">盛硕智能门控</string>
    <string name="service_telephone_number">15337148610</string>
    <string name="abort_content">Copyright@2018 盛硕电子 保留所有权利</string>
    <string name="opinion_feedback">意见反馈</string>
    <string name="commit">提 交</string>
    <string name="send_data_error">提交数据失败</string>
    <string name="used_help">使用帮助</string>
    <string name="can_not_user">暂未开放此功能，敬请期待</string>
    <string name="set_center">设置中心</string>
    <string name="chang_pwd">修改密码</string>
    <string name="chang_phone">修改手机号</string>
    <string name="clear_cache">清除缓存</string>
    <string name="check_update">检查更新</string>
    <string name="modification_now">立即修改</string>
    <string name="modification_mobile_fail">修改手机号码失败</string>
    <string name="charg_detail">充值明细</string>
    <string name="my_money">我的钱包</string>
    <string name="charge_now">立即充值</string>
    <string name="login_out">退出登录</string>
    <string name="logout">退出登录</string>
    <string name="device_info">设备信息</string>
    <string name="device_num">设备编号</string>
    <string name="my_center">个人中心</string>
    <string name="bt_sure">确定</string>
    <string name="set_pwd">设置密码</string>


    <string name="sm_item_auth">ShareSDK授权demo</string>
    <string name="not_yet_authorized">尚未授权</string>
    <string name="close_info_dialog">关闭信息界面</string>
    <string name="login_to_format">登录到%s</string>
    <string name="remove_to_format">注销%s登录</string>
    <string name="remove_to_format_success">成功移除%s登录信息</string>

    <string name="register_key_user_icon">头像:</string>
    <string name="register_key_user_name">昵称:</string>
    <string name="register_key_user_gender">性别:</string>
    <string name="register_key_user_UID">U I D:</string>
    <string name="register_key_user_mail">邮箱:</string>
    <string name="register_key_user_password">密码:</string>

    <string name="register_user_info">用户信息</string>
    <string name="register_up">注册</string>
    <string name="register_girl">女</string>
    <string name="register_boy">男</string>
    <string name="register_UserID">UserID不能修改</string>
    <string name="tpl_no_sdcard">sdcard 卡不存在</string>
    <string name="register_success">注册成功</string>
    <string name="register_failed">注册失败</string>

    <string name="wechat_client_inavailable">目前您的微信版本过低或未安装微信，需要安装微信才能使用</string>
    <string name="google_plus_client_inavailable">Google+ 版本过低或者没有安装，需要升级或安装Google+才能使用！</string>
    <string name="input_mobile_number">请输入手机号码</string>
    <string name="input_pwd">请输入密码</string>
    <string name="input_code">请输入验证码</string>
    <string name="input_pwd_different">两次输入的密码不一致</string>

    <string name="recycler_swipe_data_empty">暂时没有数据</string>
    <string name="recycler_swipe_more_not">没有更多数据啦</string>
    <string name="recycler_swipe_click_load_more">点击加载更多</string>
    <string name="recycler_swipe_load_error">加载出错啦，请稍后重试</string>
    <string name="recycler_swipe_load_more_message">正在加载更多数据，请稍后</string>
    <string name="fast_login">手机号验证码登录</string>
    <string name="loginforwx">使用微信登录</string>
    <string name="input_phone">输入手机号</string>
    <string name="querenshouji">确认手机号</string>
    <string name="not_get_verification_code">收不到验证码？重新发送</string>
    <string name="error">服务器连接失败</string>
    <string name="next">下一步</string>
    <string name="set_new_pwd">设置新密码</string>
    <string name="accountANDpwd">账号密码登录</string>
    <string name="device_electricity">电流:</string>
    <string name="deposit_pay">押金充值</string>
    <string name="cancel_addtime">继续使用</string>
    <string name="ok_addtime">加时使用</string>
    <string name="device_detail">设备详情</string>
    <string name="open_device_fail">开启设备失败，请稍后重试</string>
    <string name="close_device_fail">关闭设备失败，请稍后重试</string>
    <string name="select_device_state_fail">查询设备状态失败</string>
    <string name="man">男</string>
    <string name="women">女</string>

</resources>