<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    android:orientation="vertical"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <RelativeLayout
            android:id="@+id/iv_back"
            style="@style/click_style">

            <ImageView style="@style/back_style" />
        </RelativeLayout>

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/input_code"
            android:textColor="@color/text_color"
            android:textSize="18sp" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grayline" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="88dp"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text_light_color"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:textColor="@color/text_light_color"
            android:textSize="16sp" />

    </LinearLayout>

    <View style="@style/line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_gravity="center"
        android:background="@color/white">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="34dp"
            android:text="验证码"
            android:textColor="@color/text_light_color"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/et_code"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="14dp"
            android:layout_weight="1"
            android:background="@null"
            android:hint="请输入验证码"
            android:inputType="phone"
            android:textColor="@color/text_light_color"
            android:textSize="16sp" />

        <Button
            android:id="@+id/bt_voice_code"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_marginEnd="12dp"
            android:background="@drawable/code_background_green"
            android:padding="4dp"
            android:text="@string/get_code_voice"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:visibility="invisible" />
    </LinearLayout>

    <View style="@style/line" />


    <TextView
        android:id="@+id/tv_time_countdown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:clickable="true"
        android:textColor="@color/text_light_color"
        android:layout_marginBottom="8dp"
        android:textSize="16sp" />

    <include layout="@layout/reset_pwd" />

    <Button
        android:id="@+id/bt_next"
        style="@style/button_style"
        android:text="@string/next" />

    <!--<include layout="@layout/weixin_login" />-->
</LinearLayout>
